# BGRCore

./: CMakeLists.txt
dependencies/BGApp/include/: AppTime.h  Application.h  ApplicationEntryPoint.h  BGApp.h  Input.h  Performance.h  RuntimeLayer.h  Window.h
src/: Camera.cpp  Camera.h  Colour.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
